# dotmgr

./: CMakeLists.txt  Makefile  README.md
include/: dotmgr.hpp  globals.hpp
src/: main.cpp
src/dotmgr/: confirm_action.cpp  copy_item.cpp  help_info.cpp  init_dotfiles.cpp  list_themes.cpp  overwrite_theme.cpp  read_config.cpp  reload_script.cpp  remove_theme.cpp  replace_string.cpp  save_theme.cpp  set_theme.cpp
